// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TronStakingLearnMoreModal snapshot matches snapshot with APY loaded 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3f434a66",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="PanGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderTopLeftRadius": 24,
              "borderTopRightRadius": 24,
              "borderWidth": 1,
              "maxHeight": 640,
              "overflow": "hidden",
              "paddingBottom": 0,
              "shadowColor": "#0000001a",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 40,
            },
            {
              "transform": [
                {
                  "translateY": 640,
                },
              ],
            },
          ]
        }
      >
        <RCTScrollView
          bounces={false}
        >
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 16,
                    "height": 56,
                  },
                  false,
                  {
                    "paddingHorizontal": 16,
                  },
                ]
              }
              testID="header"
            >
              <View>
                <View
                  onLayout={[Function]}
                />
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexBasis": "0%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Stake TRX and earn
                </Text>
              </View>
              <View>
                <View
                  onLayout={[Function]}
                >
                  <TouchableOpacity
                    accessible={true}
                    activeOpacity={1}
                    disabled={false}
                    onPress={[Function]}
                    onPressIn={[Function]}
                    onPressOut={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "height": 32,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 32,
                      }
                    }
                  >
                    <SvgMock
                      color="#121314"
                      fill="currentColor"
                      height={24}
                      name="Close"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </TouchableOpacity>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "paddingHorizontal": 16,
                  "paddingVertical": 24,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#457a39",
                    "fontFamily": "Geist-Bold",
                    "fontSize": 32,
                    "letterSpacing": 0,
                    "lineHeight": 40,
                  }
                }
              >
                4.5%
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                APR
              </Text>
            </View>
            <View
              style={
                {
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Stake any amount of TRX.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  No minimum required.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Earn TRX rewards.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Start earning as soon as you stake. Rewards accrue automatically.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Flexible unstaking.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Unstake anytime. Unstaking takes 14 days to process.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-RegularItalic",
                    "fontSize": 14,
                    "fontStyle": "italic",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Staking does not guarantee rewards, and involves risks including a loss of funds.
              </Text>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "flexDirection": "row",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
          testID="bottomsheetfooter"
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="bottomsheetfooter-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Learn more
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "marginLeft": 16,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="bottomsheetfooter-button-subsequent"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Got it
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`TronStakingLearnMoreModal snapshot matches snapshot without APY 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#3f434a66",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        collapsable={false}
        enabled={false}
        handlerTag={-1}
        handlerType="PanGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderTopLeftRadius": 24,
              "borderTopRightRadius": 24,
              "borderWidth": 1,
              "maxHeight": 640,
              "overflow": "hidden",
              "paddingBottom": 0,
              "shadowColor": "#0000001a",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 40,
            },
            {
              "transform": [
                {
                  "translateY": 640,
                },
              ],
            },
          ]
        }
      >
        <RCTScrollView
          bounces={false}
        >
          <View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 16,
                    "height": 56,
                  },
                  false,
                  {
                    "paddingHorizontal": 16,
                  },
                ]
              }
              testID="header"
            >
              <View>
                <View
                  onLayout={[Function]}
                />
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexBasis": "0%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Stake TRX and earn
                </Text>
              </View>
              <View>
                <View
                  onLayout={[Function]}
                >
                  <TouchableOpacity
                    accessible={true}
                    activeOpacity={1}
                    disabled={false}
                    onPress={[Function]}
                    onPressIn={[Function]}
                    onPressOut={[Function]}
                    style={
                      {
                        "alignItems": "center",
                        "borderRadius": 8,
                        "height": 32,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 32,
                      }
                    }
                  >
                    <SvgMock
                      color="#121314"
                      fill="currentColor"
                      height={24}
                      name="Close"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </TouchableOpacity>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 16,
                  "padding": 16,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Stake any amount of TRX.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  No minimum required.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Earn TRX rewards.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Start earning as soon as you stake. Rewards accrue automatically.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Flexible unstaking.
                 
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#686e7d",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Unstake anytime. Unstaking takes 14 days to process.
                </Text>
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-RegularItalic",
                    "fontSize": 14,
                    "fontStyle": "italic",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Staking does not guarantee rewards, and involves risks including a loss of funds.
              </Text>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            {
              "flexDirection": "row",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
          testID="bottomsheetfooter"
        >
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="bottomsheetfooter-button"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Learn more
            </Text>
          </TouchableOpacity>
          <TouchableOpacity
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flex": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "marginLeft": 16,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
            testID="bottomsheetfooter-button-subsequent"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Got it
            </Text>
          </TouchableOpacity>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
